fix: Fix spacings

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -40,6 +40,8 @@
   }
 }
 
+.header { margin: 5rem auto; }
+
 .footer {
   padding: 1rem 2rem;
   font-size: 0.9rem;
